Bugzilla Bug 89539 Memory leak(s) when memory allocation fails. r=dbaron sr=blizzard